syntax = "proto3";

option csharp_namespace = "MantaRayPlan";

package messagebus;

import "google/protobuf/empty.proto";

service MessageBusService {
  rpc GetStatus (google.protobuf.Empty) returns (MessageBusStatusReply);
}

message MessageBusStatusReply {
  string message = 1;
  int32 counter = 2;
}